--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Cognitive Solution Dashboard</title>
     </head>
     <body>
-        <div id="app">
+        <div id="app" class="uk-container uk-margin-top uk-margin-bottom uk-flex"
+            uk-height-viewport="expand: true">
             <router-view></router-view>
         </div>
     </body>
